# testowe

./: .gitignore  CMakeLists.txt  README.md
include/: Game.h
src/: Game.cpp
